# amaru-debug-tools

./: .gitignore  Cargo.toml  dropped-txs.txt  flake.nix  ko.txt  ok.txt  txs.txt
nix/: devShells.nix  packages.nix
src/: cli.rs  cli_commands.rs  data_types.rs  main.rs
